# Neural-Network-With-CPP-and-Matplotlibcpp

./: CMakeLists.txt  LICENSE
include/neural_network/3L/: main.h
include/neural_network/4L/: main.h
include/neural_network/5L/: main.h
params/: wnb3L.txt  wnb4L.txt  wnb5L copy.txt
src/: example.cpp
src/3L/: main.cpp
src/4L/: main.cpp
src/5L/: a.out  main.cpp
